[package]
name = "jobs-finder"
version = "0.1.0"
authors = ["Marcelo Santos <rocha.mer21@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.6", features = ["web", "router"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
#wasm-bindgen-futures = "0.4.43"
reqwest = { version = "0.12.7", features = ["json"] }
#tokio = { version = "1.39.3", features = ["full"] }
dotenv = "0.15"
#mio = "1"


# Debug
dioxus-logger = "0.5.1"
async-recursion = "1.1.1"
futures = "0.3.30"
